--- a/src/main/resources/templates/bookform.html
+++ b/src/main/resources/templates/bookform.html
@@ -4,34 +4,52 @@
 <head>
     <title>Book Form</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="css/bootstrap.min.css?v=1.0" th:href="@{css/bootstrap.min.css?v=1.0}" />
 </head>
 
 <body>
-    <h1>Book Details</h1>
-    <div>
-        <form th:object="${book}" th:action="@{/save}" action="#" method="post">
-            <label for="author">Author</label>
-            <input type="text" id="author" th:field="*{author}" />
+    <div class="container mt-4">
+        <h1 class="mb-4">Book Details</h1>
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <form th:object="${book}" th:action="@{/save}" method="post">
+                    <input type="hidden" th:field="*{id}" />
 
-            <div style="clear: both; display: block; height: 10px;"></div>
+                    <div class="form-group">
+                        <label for="author">Author</label>
+                        <input type="text" id="author" th:field="*{author}" class="form-control" />
+                    </div>
 
-            <label for="title">Title</label>
-            <input type="text" id="title" th:field="*{title}" />
+                    <div class="form-group mt-3">
+                        <label for="title">Title</label>
+                        <input type="text" id="title" th:field="*{title}" class="form-control" />
+                    </div>
 
-            <div style="clear: both; display: block; height: 10px;"></div>
+                    <div class="form-group mt-3">
+                        <label for="isbn">ISBN</label>
+                        <input type="text" id="isbn" th:field="*{isbn}" class="form-control" />
+                    </div>
 
-            <label for="isbn">ISBN</label>
-            <input type="text" id="isbn" th:field="*{isbn}" />
+                    <div class="form-group mt-3">
+                        <label for="year">Publication Year</label>
+                        <input type="text" id="year" th:field="*{publicationYear}" class="form-control" />
+                    </div>
 
-            <div style="clear: both; display: block; height: 10px;"></div>
+                    <div class="form-group mt-3">
+                        <label for="category">Category</label>
+                        <select id="category" th:field="*{category.id}" class="form-control">
+                            <option th:each="category: ${categories}" th:value="${category.id}"
+                                th:text="${category.name}">
+                            </option>
+                        </select>
+                    </div>
 
-            <label for="year">Publication year</label>
-            <input type="text" id="year" th:field="*{publicationYear}" />
-
-            <div style="clear: both; display: block; height: 10px;"></div>
-
-            <input type="submit" value="Save"></input>
-        </form>
+                    <div class="form-group mt-4">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 
