--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns="https://www.thymeleaf.org">
 
 <head>
-    <title>Log in</title>
+    <title>Log in Page</title>
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
 
@@ -11,7 +11,7 @@
     <form th:action="@{/login}" method="post">
         <div><label> User Name : <input type="text" name="username" /> </label></div>
         <div><label> Password: <input type="password" name="password" /> </label></div>
-        <div><input type="submit" value="Sign In" /></div>
+        <div><input type="submit" value="Sign In"  /></div>
     </form>
 </body>
 
