--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="https://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
     <title>Book List</title>
@@ -8,10 +8,15 @@
 
 <body>
     <div class="container">
-        <div class="d-flex justify-content-between align-items-center my-3">
-            <h1 class="text-center mb-0">Books</h1>
+        <div class="col-md-4">
+            <h1>Books</h1>
+        </div>
+        <div class="col-md-4">
+            <h3 th:inline="text">Welcome <span sec:authentication="name"></span>! </h3>
+        </div>
+        <div class="col-md-4" style="padding:20px 0">
             <form th:action="@{/logout}" method="post">
-                <input type="submit" value="Sign Out" class="btn btn-secondary" />
+                <input type="submit" value="Sign Out" class="btn btn-sm btn-secondary" />
             </form>
         </div>
         <table>
@@ -23,8 +28,8 @@
                         <th>ISBN</th>
                         <th>Year</th>
                         <th>Category</th>
-                        <th></th>
-                        <th></th>
+                        <th sec:authorize="hasRole('ADMIN')"></th>
+                        <th sec:authorize="hasRole('ADMIN')"></th>
                     </thead>
                     <tr th:each="book : ${books}">
                         <td th:text="${book.author}"></td>
@@ -32,9 +37,10 @@
                         <td th:text="${book.isbn}"></td>
                         <td th:text="${book.publicationYear}"></td>
                         <td th:text="${book.category.name}"></td>
-                        <td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger" role="button">Delete</a>
+                        <td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}"
+                                class="btn btn-danger" role="button">Delete</a>
                         </td>
-                        <td>
+                        <td sec:authorize="hasRole('ADMIN')">
                             <a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-primary" role="button">Edit</a>
                         </td>
                     </tr>
