--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<html xmlns="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
-    <title>Log in Page</title>
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
+    <title>Spring Security Example </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
 </head>
 
 <body>
-    <div th:if="${param.error}"> Invalid username and password. </div>
-    <form th:action="@{/login}" method="post">
-        <div><label> User Name : <input type="text" name="username" /> </label></div>
-        <div><label> Password: <input type="password" name="password" /> </label></div>
-        <div><input type="submit" value="Sign In"  /></div>
-    </form>
+    <div class="col-md-4 col-md-offset-4">
+        <div class="alert alert-danger" th:if="${param.error}">
+            Invalid username and password.
+        </div>
+        <div class="alert alert-warning" th:if="${param.logout}">
+            You have been logged out.
+        </div>
+        <form th:action="@{/login}" method="post">
+            <div><label> Username : <input type="text" name="username" class="form-control" /> </label></div>
+            <div><label> Password: <input type="password" name="password" class="form-control" /> </label></div>
+            <div><input type="submit" value="Sign In" class="btn btn-primary" /></div>
+        </form>
+
+    </div>
 </body>
 
 </html>
