--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -28,8 +28,8 @@
                         <th>ISBN</th>
                         <th>Year</th>
                         <th>Category</th>
-                        <th sec:authorize="hasRole('ADMIN')"></th>
-                        <th sec:authorize="hasRole('ADMIN')"></th>
+                        <th sec:authorize="hasAuthority('ADMIN')"></th>
+                        <th sec:authorize="hasAuthority('ADMIN')"></th>
                     </thead>
                     <tr th:each="book : ${books}">
                         <td th:text="${book.author}"></td>
@@ -37,10 +37,10 @@
                         <td th:text="${book.isbn}"></td>
                         <td th:text="${book.publicationYear}"></td>
                         <td th:text="${book.category.name}"></td>
-                        <td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}"
+                        <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}"
                                 class="btn btn-danger" role="button">Delete</a>
                         </td>
-                        <td sec:authorize="hasRole('ADMIN')">
+                        <td sec:authorize="hasAuthority('ADMIN')">
                             <a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-primary" role="button">Edit</a>
                         </td>
                     </tr>
